--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Program outputs a randomly generated region using radial growth from a random seed. Each region is populated with 2 randomly generated pathes traverse N-S and E-W, a poke center and a poke mart.
+Program outputs a randomly generated region using radial growth from a random seed. Each region is populated with 2 randomly generated paths traverse N-S and E-W, a poke center and a poke mart.
 Key
 ---
 Boulder:     %
