--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,2 @@
 01/31/2022 - Started project, created enums that represent tiles in a region, created function to print a region
+02/01/2022 - Implemented randomly generated terrain. (no pathes, centers or marts yet)
