--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Files:
+main.c
+Makefile
+CHANGELOG
+README
+
 Program outputs a randomly generated region using radial growth from a random seed. Each region is populated with 2 randomly generated paths traverse N-S and E-W, a poke center and a poke mart.
 Key
 ---
