--- a/README
+++ b/README
@@ -4,7 +4,8 @@ Makefile
 CHANGELOG
 README
 
-Program outputs a randomly generated region using radial growth from a random seed. Each region is populated with 2 randomly generated paths traverse N-S and E-W, a poke center and a poke mart.
+Regions are generated and allocated memory only once visited. Region exits align with neighboring regions. Poke centers and poke marts become less common as distance from the orgin increases. Controls can be used to navigate between regions.
+
 Key
 ---
 Boulder:     %
@@ -14,3 +15,9 @@ Poke Mart:   M
 Path:        #
 Grass:       :
 Clearing:    .
+
+Controls
+---
+n,s,e,w - Move one region North, South, East, or West respectively
+f [x] [y] - Fly to a specified region
+q - quit
