--- a/CHANGELOG
+++ b/CHANGELOG
@@ -32,3 +32,4 @@
 04/04/2022 - Added wild pokemon encounter placeholder
              Added pokedex database: pokemon_stats.csv
 04/05/2022 - Added Pokemon Class
+04/06/2022 - Fixed bug in file parsing that caused crashes in some environments.
