--- a/CHANGELOG
+++ b/CHANGELOG
@@ -33,3 +33,4 @@
              Added pokedex database: pokemon_stats.csv
 04/05/2022 - Added Pokemon Class
 04/06/2022 - Fixed bug in file parsing that caused crashes in some environments.
+04/10/2022 - Added Items and Bag menu(w/ scroller!)
