--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,17 +25,16 @@
              Added trainer list overlay.
 03/23/2022 - Added navigation between regions.
              Invalid moves no longer pass the player's turn.
-             Added defeated indicator to the trainer list overlay
-03/29/2022 - Converted to C++
-03/30/2022 - Reimplemented Character(Pc/Npc) and Region structs as classes
-03/31/2022 - Added pokedex database parsing
-04/04/2022 - Added wild pokemon encounter placeholder
+             Added defeated indicator to the trainer list overlay.
+03/29/2022 - Converted to C++.
+03/30/2022 - Reimplemented Character(Pc/Npc) and Region structs as classes.
+03/31/2022 - Added pokedex database parsing.
+04/04/2022 - Added wild pokemon encounter placeholder.
              Added pokedex database: pokemon_stats.csv
-04/05/2022 - Added Pokemon Class
+04/05/2022 - Added Pokemon Class.
 04/06/2022 - Fixed bug in file parsing that caused crashes in some environments.
-04/10/2022 - Added Items and Bag menu(w/ scroller!)
-04/11/2022 - Added pokemon parties and starter selection
-04/12/2022 - Updated controls
-             Fixed bug that selecting a starter would not show next screen
-             
-             
+04/10/2022 - Added Items and Bag menu(w/ scroller!).
+04/11/2022 - Added pokemon parties and starter selection.
+04/12/2022 - Updated controls.
+             Fixed bug that selecting a starter would not show next screen.
+04/13/2022 - Added Pokemon Battle screen.
