Added pokemon summary view

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -39,3 +39,4 @@
              Fixed bug that selecting a starter would not show next screen.
 04/13/2022 - Added battle screen.
 04/14/2022 - Implemented encounter battle mechanics.
+04/16/2022 - Added pokemon summary view.
