Implemented trainer battle mechanics

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,3 +41,4 @@
 04/14/2022 - Implemented encounter battle mechanics.
 04/15/2022 - Implemented item mechanics for pokeballs, potions, and revives.
 04/16/2022 - Added pokemon summary view.
+04/17/2022 - Implemented trainer battle mechanics.
