Added type effectiveness

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -42,3 +42,4 @@
 04/15/2022 - Implemented item mechanics for pokeballs, potions, and revives.
 04/16/2022 - Added pokemon summary view.
 04/17/2022 - Implemented trainer battle mechanics.
+05/05/2022 - Implemented type effectiveness.
