Pokemarts now sell/buy items

--- a/README
+++ b/README
@@ -11,9 +11,10 @@ done. Add type effectiveness
 done. Add Pokemon experience/levelup
 done. pokemon need to earn exp from defeating opponent
 done. Add Player money and trainer drop money
+done. Add different pokeball types
+done. Add pokeball catch mechanicsnew items
+done. Added 
 
-Add different pokeball types
-Add pokeball catch mechanics
 Add Pokemart
       buy/sell pokeballs
 Add Pokecenter
