--- a/CHANGELOG
+++ b/CHANGELOG
@@ -44,6 +44,11 @@
 04/17/2022 - Implemented trainer battle mechanics.
 05/05/2022 - Implemented type effectiveness.
              Pokemon can now level up.
-             Pokemon will now learn moves one levelup.
+             Pokemon will now learn moves opon levelup, according to thier learnset.
 05/06/2022 - Pokemon now gain exp for fainting pokemon.
-05/06/2022 - Added poke dollars. Trainers will now payout poke dollars on defeat.
+           - Added poke dollars. Trainers will now payout poke dollars on defeat.
+           - Added the following new items... Great Ball, Ultra Ball, Master Ball, 
+             Super Potion, Hyper Potion, Max Potion, Ether, Max Ether, Elixir, 
+             Max Elixir, Max Revive, Rare Candy
+           - Pokeball catch mechanics are now working.
+           - Pokemarts now buy and sell items.
