--- a/README
+++ b/README
@@ -12,7 +12,7 @@ New Features:
   Added the following new items... Great Ball, Ultra Ball, Master Ball, 
   Super Potion, Hyper Potion, Max Potion, Ether, Max Ether, Elixir, Max Elixir, 
   Max Revive, Rare Candy
-  Pokeball catch mechanics are now full implemented.
+  Pokeball catch mechanics are now fully implemented.
   Pokemarts now buy and sell items.
 
 Future Features:
